<?xml version="1.0"?>
<package>
  <name>rail_pick_and_place_wrapper</name>
  <version>0.0.1</version>
  <description>High-level interface for pick and place functionality</description>
  
  <maintainer email="davidkent@wpi.edu">David Kent</maintainer>
  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rail_recognition</build_depend>
  <build_depend>rail_pick_and_place_msgs</build_depend>
  <build_depend>rail_segmentation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>wpi_jaco_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rail_recognition</run_depend>
  <run_depend>rail_pick_and_place_msgs</run_depend>
  <run_depend>rail_segmentation</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>wpi_jaco_msgs</run_depend>

  <export>
  </export>
</package>
