<package>
  <name>rail_pick_and_place_wrapper</name>
  <version>0.0.1</version>
  <description>High-level Interface for Pick and Place Functionality</description>

  <author email="davidkent@wpi.edu">David Kent</author>
  <maintainer email="davidkent@wpi.edu">David Kent</maintainer>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rail_pick_and_place_wrapper</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/rail_pick_and_place/issues</url>
  <url type="repository">https://github.com/WPI-RAILrail_pick_and_place</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rail_recognition</build_depend>
  <build_depend>rail_pick_and_place_msgs</build_depend>
  <build_depend>rail_segmentation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>wpi_jaco_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rail_recognition</run_depend>
  <run_depend>rail_pick_and_place_msgs</run_depend>
  <run_depend>rail_segmentation</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>wpi_jaco_msgs</run_depend>
  <run_depend>actionlib</run_depend>
</package>
