<?xml version="1.0"?>
<package>
  <name>rail_recognition</name>
  <version>0.0.1</version>
  <description>Construction and Use of a Recognition Database for Grasping Purposes</description>

  <author email="davidkent@wpi.edu">David Kent</author>
  <maintainer email="davidkent@wpi.edu">David Kent</maintainer>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rail_recognition</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/rail_pick_and_place/issues</url>
  <url type="repository">https://github.com/WPI-RAILrail_pick_and_place</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>manipulation_msgs</build_depend>
  <build_depend>rail_grasping</build_depend>
  <build_depend>rail_pick_and_place_msgs</build_depend>
  <build_depend>rail_segmentation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libvtk</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>manipulation_msgs</run_depend>
  <run_depend>rail_grasping</run_depend>
  <run_depend>rail_pick_and_place_msgs</run_depend>
  <run_depend>rail_segmentation</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>libvtk</run_depend>
</package>
