<package>
  <name>rail_recognition</name>
  <version>1.1.3</version>
  <description>Construction and Use of a Recognition Database for Grasping Purposes</description>

  <author email="davidkent@wpi.edu">David Kent</author>
  <author email="rctoris@wpi.edu">Russell Toris</author>
  <maintainer email="davidkent@wpi.edu">David Kent</maintainer>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rail_recognition</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/rail_pick_and_place/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/rail_pick_and_place</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>graspdb</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>rail_manipulation_msgs</build_depend>
  <build_depend>rail_pick_and_place_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>graspdb</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>rail_manipulation_msgs</run_depend>
  <run_depend>rail_pick_and_place_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf2</run_depend>
</package>
